fixed invisible buttons

--- a/client/main.scss
+++ b/client/main.scss
@@ -104,7 +104,3 @@ body {
 .handle {
 	cursor: pointer;
 }
-
-#test {
-    opacity: 100% !important;
-}
